// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render label widget 1`] = `
<div>
  <div
    class="css-1vrv3vk-propertySectionLabel"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-17g5t60-style css-1orsvah-MuiTypography-root-MuiLink-root"
      href="the/url/value"
      id="labelId"
      rel="noopener noreferrer"
      target="_blank"
    >
      myLabel
    </a>
  </div>
</div>
`;

exports[`render label widget with help hint 1`] = `
<div>
  <div
    class="css-1vrv3vk-propertySectionLabel"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-17g5t60-style css-1orsvah-MuiTypography-root-MuiLink-root"
      href="the/url/value"
      id="labelId"
      rel="noopener noreferrer"
      target="_blank"
    >
      myLabel
    </a>
    <svg
      aria-hidden="true"
      aria-label=""
      class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-25to7p-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="HelpOutlineOutlinedIcon"
      focusable="false"
      style="margin-left: 8px; font-size: 16px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
      />
    </svg>
  </div>
</div>
`;

exports[`render label widget with style 1`] = `
<div>
  <div
    class="css-1vrv3vk-propertySectionLabel"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1mwjg0n-style css-1orsvah-MuiTypography-root-MuiLink-root"
      href="the/url/value"
      id="labelId"
      rel="noopener noreferrer"
      target="_blank"
    >
      myLabel
    </a>
  </div>
</div>
`;
